@@ -1,4 +1,8 @@
-2005-07-09  Kalpit Desai <kvdesai@email.unc.edu>
+2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
+	* fcd_forcecal2d.m: removed and renamed to forcecal2d.m
+	* forcecal2d.m: added. added the MIP background, and separated the plots into different figures so that they might have different colormaps.
+
+2005-06-09  Kalpit Desai <kvdesai@email.unc.edu>
 	* visVelocities.m: 
 	- Commented out the code that was removing the datapoints with absolutely zero velocities. For simulation purposes, we would like to see this data points through.
 
